fix: use full screen width for open modal on mobile (#13)

--- a/shell/css/terminal.css
+++ b/shell/css/terminal.css
@@ -570,6 +570,7 @@ canvas {
   }
 
   .open-window {
+    width: 100%;
     max-width: 100%;
     max-height: 100%;
     height: 100%;
